package TaskHub.Exception;

public class TacheException extends Exception{

    public TacheException(String message){
        super(message);
    }
    public TacheException(){
        super();
    }
}
