package TaskHub.Exception;

public class TacheNomVideException extends TacheException{
    public TacheNomVideException(String message) {
        super(message);
    }

    public TacheNomVideException(){
        super();
    }
}
